# vireon-rd-groundtruth

./: .gitignore  CHANGELOG.md  CITATION.cff  COMPARE.md  CONTRACT.md  Makefile  README.md  REPRODUCE.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: bench.yml  ci.yml  release.yml
docs/: PROTOCOL.md  REPRODUCIBILITY.md  THEORY.md
scripts/: evidence_pack.py  make_figures.py  run_bench.py
src/vireon_rd/: __main__.py  engine.py  eval.py  falsify.py  io.py  metrics.py  numerics.py  sim.py  specs.py  trp.py
tests/: test_contract_meta_status.py  test_engine_run_artifacts.py  test_small_sims.py  test_smoke.py
